--- a/app/about.html
+++ b/app/about.html
@@ -11,7 +11,7 @@
 
 <div class="container">
     <header class="header">
-        <div class="lang">
+        <div class="lang dota dota-2">
             <div class="lang-choose">
                 <a href="#">ук</a>
                 <a href="#">ру</a>
@@ -112,9 +112,24 @@
     </div>
 </main>
 
-<div class="container">
-    <footer class="footer">
-        
+<div class="backgroung-main">
+    <footer class="footer container">
+        <div class="contacts">
+            <div class="contacts__one dota">
+                <div class="adress adress-footer">Kyiv, Mechnikova str., 14/1</div>
+                <div><a class="map" href="#">On map</a></div>
+            </div>
+            <div class="contacts__two dota">
+                <a class="fb" href="#">
+                    <img src="img/fb-footer.svg" width="38" height="38" alt="fb">
+                </a>
+                <a class="phone phone-footer" href="tel:0800211927">0800 211 927</a>
+                <a class="mailto" href="mailto:contact@forstudy.space">contact@forstudy.space</a>
+            </div>
+            <div class="contacts__three">
+                <p class="copyright">© 2021 HLEGAL Law company, LLC</p>
+            </div>
+        </div>
     </footer>
 </div>
 
